src/test/vm/exception_handler.php.exp
HipHop Fatal error: Uncaught exception exception 'Exception' with message 'throwing first' in src/test/vm/exception_handler.php:9
Stack trace:
#0 src/test/vm/exception_handler.php(11): main()
#1 {main}
Exception handler threw an object exception: exception 'Exception' with message 'throwing second' in src/test/vm/exception_handler.php:4
Stack trace:
#0 (): exn_throw()
#1 {main}
