src/test/vm/exception_handler.php.filter
#!/bin/bash
sed -e 's,\\n,\n,g' | sed -e 's, /.*src/, src/,g'
